--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ ul li a:hover{
 }
 button:hover{
   background-color: black;
-  color: white;
+  color:grey;
   font-size: 10px;
   border-radius: 20%;
 }
