changed back-ground color

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:hover{
   border-radius: 20%;
 }
 #blog{
-  background-color: azure;
+  background-color: white;
 }
 .ndani{
   border:5px solid grey;
