--- a/style.css
+++ b/style.css
@@ -95,6 +95,6 @@ border-radius: 50px;
 .footer{
   font-size: 60px;
   padding-top: 10px;
-  border:5px solid blue;
+  border:5px solid black;
   border-radius:60px;
 }
