--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ border:1px
 border-radius: 50px;
 }
 .mauano{
-  background-color:blue;
+  background-color:whitesmoke;
 }
 .footer{
   font-size: 60px;
