--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ background-color: white;
 }
 
 ul li a:hover{
-  background-color: blue;
+  background-color: royalblue;
   color: green;
 }
 button:hover{
